--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
     <center>
         <h3>Login Here</h3>
 
-        <form action="startpage-2-47.html" method="post">
+        <form location.href="startpage-2-47.html" method="post">
 
             <table>
                 <tr>
