--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
     <center>
         <h3>Login Here</h3>
 
-        <form location.href="startpage-2-47.html" method="post">
+        <form method="post">
 
             <table>
                 <tr>
@@ -31,7 +31,7 @@
 
                 <tr>
                     <td>
-                        <input type="submit" name="submit" value="Login">
+                        <button location.href="startpage-2-47.html">Login</button>
                     </td>
 
                     <td>
