--- a/login.html
+++ b/login.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html>
 
 <head>
@@ -12,7 +11,7 @@
     <center>
         <h3>Login Here</h3>
 
-        <form method="post">
+        <form method="post" action="startpage-2-47.html">
 
             <table>
                 <tr>
@@ -31,7 +30,7 @@
 
                 <tr>
                     <td>
-                        <button location.href="startpage-2-47.html">Login</button>
+                        <input type="submit" value="Login">
                     </td>
 
                     <td>
