--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
     <center>
         <h3>Login Here</h3>
 
-        <form method="post" action="startpage-2-47.html">
+        <form method="post" action="startpage-2-47">
 
             <table>
                 <tr>
